--- a/server/master/pom.xml
+++ b/server/master/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>cn.lover.space</groupId>
     <artifactId>master</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>anno-spring-boot-starter</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -20,6 +24,16 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.62</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.9</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.lover.space</groupId>
+                <artifactId>anno-spring-boot-starter</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
