--- a/server/master/application/src/main/resources/application-consul.properties
+++ b/server/master/application/src/main/resources/application-consul.properties
@@ -1,5 +1,5 @@
 spring.cloud.consul.enabled=true
-spring.cloud.consul.host=49.235.198.116
+spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.enabled=true
 spring.cloud.consul.discovery.query-passing=true
